# o2lib

./: .gitignore  README.md  pyproject.toml
o2lib/validacao/: cep.py
tests/: test_cep.py
validacao/: cep.py
