[project]
name = "o2lib"
version = "0.0.1"
description = "Lib utilitária com funções como validação de CEP"
authors = [{name = "Anselmo Blanco Dominguez", email = "anselmo.blanco.dominguez@gmail.com"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "isort"
]
